--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -21,11 +21,11 @@
     <div class="nav_bar">
         <header class="d-flex align-items-center py-3 bg-light header">
             <div class="container">
-                <nav class="navbar-expand-lg " action="/" method="post">
+                <nav class="navbar-expand-lg " action="/home" method="post">
                     <div id="navbarNav">
                         <ul class="nav justify-content-center">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Logo</a>
+                                <a class="nav-link active" aria-current="page" href="/home">Logo</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/buy">Buy a Firearm</a>
@@ -116,7 +116,7 @@
         <div class=" seconderow">
             <div class="container text-center">
                 <div class="row row-cols-4">
-                    <div class="col"><img src="\Assets\Icon button 1.png" class="img-thumbnail">
+                    <div class="col"><img src="\Assets\Icon button 1.png" class="img-thumbnail" style="border: none;">
                         <br>
                         <h6>Compentency Application</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
@@ -124,7 +124,7 @@
                             odio
                             exercitationem quod</p>
                     </div>
-                    <div class="col"><img src="\Assets\Icon button 2.png" class="img-thumbnail" alt="...">
+                    <div class="col"><img src="\Assets\Icon button 2.png" class="img-thumbnail" alt="..." style="border: none;" >
                         <br>
                         <h6>Sell Your Firearms</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
@@ -132,7 +132,7 @@
                             odio
                             exercitationem quod</p>
                     </div>
-                    <div class="col"><img src="\Assets\Icon button 3.png" class="img-thumbnail" alt="...">
+                    <div class="col"><img src="\Assets\Icon button 3.png" class="img-thumbnail" alt="..." style="border: none;">
                         <br>
                         <h6>Firearm Valuation</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
@@ -140,7 +140,7 @@
                             odio
                             exercitationem quod</p>
                     </div>
-                    <div class="col"><img src="\Assets\Icon button 4.png" class="img-thumbnail" alt="..."><br>
+                    <div class="col"><img src="\Assets\Icon button 4.png" class="img-thumbnail" alt="..." style="border: none;"><br>
                         <h6>Background Checks</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
                             accusamus
@@ -181,7 +181,7 @@
                 <div class="row justify-content-start">
                     <div class="col-4">
                         <div class="fourthImg">
-                            <img src="/Assets/Img1.PNG" class="img-thumbnail" alt="...">
+                            <img src="/Assets/Img1.PNG" class="img-thumbnail" alt="..." style="border: none;">
                         </div>
                     </div>
                     <div class="col-4">
@@ -208,7 +208,7 @@
             </div>
         </div>
         <div class="Trusted">
-            <img src="\Assets\Group 6.png" alt="">
+            <img src="\Assets\Group 6.png" alt="" style="border: none;">
         </div>
         <footer>
             <div class="container text-center">
