--- a/Views/userProf.ejs
+++ b/Views/userProf.ejs
@@ -3,15 +3,63 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/stylesheets/userProf.css">
     <title>Document</title>
 </head>
 
 <body>
     <div action="/userProf" method="post">
-        <h1>Welcome user </h1>
-        <a href="logout">Log out</a>
+        <div class="container">
+            <div class="row">
+              <div class="col-9"> <nav class="nav">
+                <a class="nav-link" href="#" style="color: white;">Buy a firearm</a>
+                <a class="nav-link" href="#" style="color: white;">Sell a firearm</a>
+                <a class="nav-link" href="#" style="color: white;">Value my firearm</a>
+                <a class="nav-link" href="#" style="color: white;">Get your compatency</a
+                      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                        <ul class="navbar-nav">
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              User Name
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                              <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                              <li><a class="dropdown-item" href="#">Go Pro</a></li>
+                              <li><a class="dropdown-item" href="#">Help Center</a></li>
+                              <li><a class="dropdown-item" href="#">Sign Out</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
+              <div class="col-4"><br> <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#" style="font-size: 32px; 
+                  line-height: 48px; 
+                  color: #323743FF; /* neutral-700 */
+                  font-weight: bold;
+                ">LOGO</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true" style="background-color: black; margin-top: 20px; left: 15px;">Create new listings</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" style="margin-top: 70px;">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+              </ul></div>
+            </div>
+          </div>
     </div>
 </body>
 
